Fix overlapped tab text rendering in Chrome
Fixes #160

--- a/axelor-front/src/layout/nav-tabs/nav-tabs.module.scss
+++ b/axelor-front/src/layout/nav-tabs/nav-tabs.module.scss
@@ -49,6 +49,11 @@
   display: flex;
 }
 
+.tabText {
+  // XXX: Fix overlapped tab text rendering in Chrome
+  z-index: 1;
+}
+
 .dirty {
   .tabText::after {
     content: "*";
